# GameEngine

./: CMakeLists.txt  CMakeSettings.json
include/: CMakeLists.txt
include/entt/: CMakeLists.txt
include/glew-2.1.0/: glew.pc
include/glew-2.1.0/lib/Debug/Win32/: glew32d.exp  glew32d.lib  glew32sd.lib
include/glew-2.1.0/lib/Debug/x64/: glew32d.exp  glew32d.lib  glew32sd.lib
include/glew-2.1.0/lib/Release/Win32/: glew32.exp  glew32.lib  glew32s.lib
include/glew-2.1.0/lib/Release/x64/: glew32.exp  glew32.lib  glew32s.lib
source/: CMakeLists.txt  GameEngine.cpp  GameEngine.h
source/assets/: CMakeLists.txt  SimpleFragmentShader.frag  SimpleVertexShader.vert
source/runtime/: CMakeLists.txt
source/runtime/ecs/: CMakeLists.txt
source/runtime/ecs/Registry/: CMakeLists.txt  Registry.md
source/runtime/ecs/Registry/inc/: AComponent.h  ActorEvents.h  CMakeLists.txt  Entity.h  Registry.h
source/runtime/ecs/Registry/inc/Components/: ActorComponent.hpp  IdComponent.h  RndComponent.hpp  TickComponent.hpp
source/runtime/ecs/Registry/inc/win32/: EnttEntity.h
source/runtime/ecs/Registry/src/: Entity.cpp  Registry.hpp
source/runtime/ecs/Registry/src/win32/: AComponent.cpp  EnttEntity.cpp
source/runtime/reflection/: CMakeLists.txt  ReflectiveEnumerator.hpp
source/runtime/rendering/: CMakeLists.txt
source/runtime/rendering/inc/: Model2D.h  Rendering.h
source/runtime/rendering/inc/win32/debug/: TestRendering.h
source/runtime/rendering/src/win32/: Rendering.cpp
source/runtime/rendering/src/win32/debug/: TestRendering.cpp
